--- a/Team-up-front/src/modules/Footer.module.scss
+++ b/Team-up-front/src/modules/Footer.module.scss
@@ -1,5 +1,5 @@
 .footer {
-    background-color: #1a1a1a;
+    background-color: #192125;
     color: #ffffff;
     padding: 4rem 0 2rem;
     margin-top: auto;
