--- a/Team-up-front/src/modules/Navbar.module.scss
+++ b/Team-up-front/src/modules/Navbar.module.scss
@@ -1,272 +1,105 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
-
-nav {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  background-color: #000;
-  color: #fff;
-  z-index: 1000;
+.header {
   display: flex;
-  width: 100%;
   justify-content: space-between;
   align-items: center;
-  padding-left: 40px;
-  padding-right: 40px;
-  height: 72px;
-  font-family: "Roboto", serif;
-  border-bottom: 1px solid #ececec;
+  padding: 0px 40px 0px 40px;
+  height: 80px !important;
+  background-color: #222831;
+  color: #EAEFEF;
+  box-shadow: 1px 1px 24px 0px rgba(112,112,112,0.75);
+  -webkit-box-shadow: 1px 1px 24px 0px rgba(112,112,112,0.75);
+  -moz-box-shadow: 1px 1px 24px 0px rgba(112,112,112,0.75);
 
-  div {
-    display: flex;
-    gap: 50px;
-
-    .nav-logo {
-      width: 7.8rem;
-      cursor:pointer;
-    }
-
-    ul {
-      display: flex;
-      gap: 35px;
-
-      li {
-        list-style-type: none;
-        cursor: pointer;
-        padding: 5px 15px;
-        border-radius: 5px;
-        transition: all 0.2s;
-      }
-
-      li:hover {
-        color: #000;
-        background-color: #fff;
-      }
-    }
-
-    .profile-btn {
-      background: none;
-      border: none;
-      cursor: pointer;
-      display: inline-block;
-      padding: 8px;
-      align-items: center;
-      justify-content: center;
-      transition: all 0.3s;
-      border-radius: 5px;
-
-      div {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        height: 100%;
-        gap: 10px;
-
-        h3 {
-          font-weight: 550;
-          color: #fff;
-
-          @media screen and (max-width: 768px) {
-            display: none;
-            
-          }
-        }
-      }
-    }
-
-    .profile-btn:hover {
-      background-color: #e5e5e5;
-    }
-
-    .dropdown-menu {
-      display: block;
-      position: absolute;
-      background-color: white;
-      box-shadow: 0 8px 16px rgba(0,0,0,0.2);
-      padding: 10px;
-      list-style: none;
-      margin: 0;
-      right: 0;
-      transform: translate(-50px, 130px);
-
-      .user {
-        color: #000;
-        border-bottom: 1px solid #000;
-        display: none;
-
-        @media screen and (max-width: 768px) {
-          display: flex;
-        }
-      }
-
-      .user-li {
-        display: none;
-
-        @media screen and (max-width: 768px) {
-          display: flex;
-        }
-      }
-      
-      li {
-        padding: 8px 12px;
-        cursor: pointer;
-      }
-
-      li a {
-        text-decoration: none;
-        color: black;
-      }
-
-      li:hover {
-        background-color: #f1f1f1;
-      }
-    }
-
-  }
-
-  .nav-btn {
-    background-color: #4318d1;
-    border: none;
-    border-radius: 7px;
-    width: 90px;
-    height: 40px;
-    color: white;
-    cursor: pointer;
-    transition: all 0.3s;
-  }
-
-  .nav-btn:hover {
-    background-color: #250e7e;
-  }
-
-  .profile-icon {
-    background-size: cover;
-    height: 25px;
-    width: 25px;
-    border-radius: 50%;
-    color: white;
-    background-color: #000;
-    padding: 7px;
-  }
-
-  .nav-left {
-    display: flex;
+  .left-side {
     align-items: center;
-    gap: 50px;
+    display: flex;
+    gap: 120px;
+
+    img {
+      width: 200px;
+    }
+
+    .li-links {
+      display: flex;
+      gap: 50px;
+      cursor: pointer;
+      list-style-type: none;
+      font-size: 17px;
+      font-weight: 500;
+
+      li {
+        transition: all 0.3s;
+        padding: 4px 10px;
+        border-radius: 7px;
+        &:hover {
+          background-color: #DFD0B8;
+          color: #222831;
+        }
+      }
+    }
   }
 
-  .nav-right {
+  .profile-side {
     display: flex;
     align-items: center;
     gap: 20px;
 
-    
-  }
+    button {
+      padding: 12px 25px;
+      border-radius: 8px;
+      border: 1px solid #948979;
+      background-color: #393E46;
+      cursor: pointer;
+      font-size: 15px;
+      font-weight: 550;
+      color: #DFD0B8;
+      transition: all 0.3s;
 
-  .hamburger {
-    display: none;
-    flex-direction: column;
-    gap: 5px;
-    cursor: pointer;
+      &:hover {
+        border: 1px solid #393E46;
+        background-color: #DFD0B8;
+        color: #222831;
+      }
+    }
 
-    span {
-      display: block;
-      width: 25px;
-      height: 3px;
-      background-color: #fff;
-      transition: all 0.3s ease;
+    img {
+      background-size: cover;
+      width: 52px;
+      height: 52px;
+      padding: 5px;
+      border-radius: 7px;
+      transition: all 0.3s;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      &:hover {
+        background-color: #948979;
+      }
     }
   }
 
-  @media (max-width: 768px) {
-    padding: 20px;
-    position: relative;
-
-    .hamburger {
-      display: flex;
-    }
-
-    .nav-links {
-      display: flex;
-      position: absolute;
-      top: 72px;
-      left: 0;
-      width: 100%;
-      color: black;
-      background-color: white;
-      flex-direction: column;
-      padding: 20px;
-      gap: 15px;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-
+  .dropdown-menu {
+    transform: translate(1729px, 125px);
+    position: absolute;
+    z-index: 10;
+    background-color: #213448;
+    padding: 14px;
+    border-radius: 7px;
+    gap: 20px;
 
       li {
-        width: 100%;
-        text-align: center;
+        font-size: 17px;
+        color: #ECEFCA;
+        font-weight: 500;
+        list-style-type: none;
+        cursor: pointer;
+        padding: 5px;
+        transition: all 0.3s;
+        border-radius: 5px;
+        &:hover {
+          background-color: #547792;
+        }
       }
-    }
-
-    .nav-right {
-      gap: 10px;
-
-      .nav-btn {
-        display: none; 
-      }
-    }
-
-    .dropdown-menu {
-      transform: translate(-20px, 55px);
-    }
-  }
-
-  @media (max-width: 768px) {
-    padding: 20px;
-    position: relative;
-
-    .hamburger {
-      display: flex;
-    }
-
-    .nav-links {
-      display: none;
-      position: absolute;
-      top: 72px;
-      left: 0;
-      width: 100%;
-      background-color: white;
-      flex-direction: column;
-      padding: 20px;
-      gap: 15px;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-
-      &.active {
-        display: flex;
-      }
-
-      li {
-        width: 100%;
-        text-align: center;
-      }
-    }
-
-    .nav-right {
-      gap: 10px;
-
-      .nav-btn {
-        display: none; 
-      }
-    }
-
-    .dropdown-menu {
-      transform: translate(-20px, 55px);
-    }
-  }
-
-  @media (min-width: 769px) {
-    .nav-links {
-      display: flex !important; 
-    }
   }
 }
